--- a/.dockerignore
+++ b/.dockerignore
@@ -23,7 +23,10 @@ Thumbs.db
 *.log
 logs/
 
-# Environment files
+# Environment files (except example)
+.env
+.env.local
+.env.production
 env.example
 
 # Build artifacts
