--- a/nginx.conf
+++ b/nginx.conf
@@ -11,9 +11,10 @@ http {
 
     server {
         listen 80;
+        server_name find-my-friend.brazilsouth.cloudapp.azure.com;
 
         # Redirigir /api/v1 al backend
-        location /api/v1 {
+        location /api/v1/ {
             proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -22,7 +23,7 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Todo lo demás al frontend
+        # Servir el frontend para cualquier otra ruta
         location / {
             proxy_pass http://frontend;
             proxy_http_version 1.1;
