--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "1433:1433"
     environment:
-      SA_PASSWORD: "TuPassword123!"
+      SA_PASSWORD: TuPassword123
       ACCEPT_EULA: "Y"
     volumes:
       - sqlserver_data:/var/opt/mssql
@@ -20,7 +20,7 @@ services:
       DB_HOST: sqlserver
       DB_PORT: 1433
       DB_USER: sa
-      DB_PASSWORD: "TuPassword123!"
+      DB_PASSWORD: TuPassword123
       DB_NAME: find-my-friend
     ports:
       - "8080:8080"
