--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "1433:1433"
     environment:
-      SA_PASSWORD: TuPassword123
+      SA_PASSWORD: p
       ACCEPT_EULA: "Y"
     volumes:
       - sqlserver_data:/var/opt/mssql
@@ -20,7 +20,7 @@ services:
       DB_HOST: sqlserver
       DB_PORT: 1433
       DB_USER: sa
-      DB_PASSWORD: TuPassword123
+      DB_PASSWORD: p
       DB_NAME: find-my-friend
     ports:
       - "8080:8080"
@@ -31,8 +31,6 @@ services:
     container_name: frontend_container
     depends_on:
       - go-api-find-my-friend
-    environment:
-      VITE_API_BASE_URL: "http://localhost:8080/api/v1"
     ports:
       - "3000:3000"
     restart: unless-stopped
