--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,11 +17,15 @@ services:
     depends_on:
       - sqlserver
     environment:
+      ENVIRONMENT: production
       DB_HOST: sqlserver
       DB_PORT: 1433
       DB_USER: sa
       DB_PASSWORD: p
       DB_NAME: find-my-friend
+      CLOUDINARY_CLOUD_NAME: "dw9e57leg"
+      CLOUDINARY_API_KEY: "253523817534744"
+      CLOUDINARY_API_SECRET: "2K5NwA4y4vKtUdKaXKV1uZjtCr0x"
     ports:
       - "8080:8080"
     restart: unless-stopped
