--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "1433:1433"
     environment:
-      SA_PASSWORD: p
+      SA_PASSWORD: password123*
       ACCEPT_EULA: "Y"
     volumes:
       - sqlserver_data:/var/opt/mssql
@@ -21,7 +21,7 @@ services:
       DB_HOST: sqlserver
       DB_PORT: 1433
       DB_USER: sa
-      DB_PASSWORD: p
+      DB_PASSWORD: password123*
       DB_NAME: find-my-friend
       CLOUDINARY_CLOUD_NAME: "dw9e57leg"
       CLOUDINARY_API_KEY: "253523817534744"
