--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       SA_PASSWORD: "Password123*"
       ACCEPT_EULA: "Y"
     volumes:
+      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
       - sqlserver_data:/var/opt/mssql
     restart: unless-stopped
 
