--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,39 @@
 version: "3.9"
 
 services:
-  sqlserver:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: sqlserver_container
+  mysql:
+    image: mysql:8.1
+    container_name: mysql_container
     ports:
-      - "1433:1433"
+      - "3306:3306"
     environment:
-      SA_PASSWORD: "Password123*"
-      ACCEPT_EULA: "Y"
+      MYSQL_ROOT_PASSWORD: "Password123*"
+      MYSQL_DATABASE: "find_my_friend"
+      MYSQL_USER: "appuser"
+      MYSQL_PASSWORD: "Password123*"
     volumes:
-      - sqlserver_data:/var/opt/mssql
+      - mysql_data:/var/lib/mysql
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "/opt/mssql-tools/bin/sqlcmd", "-S", "127.0.0.1", "-U", "sa", "-P", "Password123*", "-Q", "SELECT 1"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "appuser", "-pPassword123*"]
       interval: 10s
       retries: 10
-      start_period: 60s
+      start_period: 30s
 
   go-api-find-my-friend:
     build: .
     container_name: backend_container
     depends_on:
-      sqlserver:
+      mysql:
         condition: service_healthy
     environment:
       ENVIRONMENT: production
-      DB_HOST: sqlserver
-      DB_PORT: 1433
-      DB_USER: sa
+      DB_HOST: mysql
+      DB_PORT: 3306
+      DB_USER: appuser
       DB_PASSWORD: "Password123*"
-      DB_NAME: find-my-friend
+      DB_NAME: find_my_friend
       CLOUDINARY_CLOUD_NAME: "dw9e57leg"
       CLOUDINARY_API_KEY: "253523817534744"
       CLOUDINARY_API_SECRET: "2K5NwA4y4vKtUdKaXKV1uZjtCr0x"
@@ -61,4 +63,4 @@ services:
     restart: unless-stopped
 
 volumes:
-  sqlserver_data:
+  mysql_data:
