--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "1433:1433"
     environment:
       SA_PASSWORD: "Password123*"
+      MSSQL_SA_PASSWORD: "Password123*"
       ACCEPT_EULA: "Y"
     volumes:
       - sqlserver_data:/var/opt/mssql
